<resources>
    <string name="app_name">BU-tools</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_map">Map</string>
    <string name="menu_sports">Gym schedule</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_settings">Settings</string>
    <string name="tool_directory">BU directory</string>
    <string name="tool_moodle">MOODLE</string>
    <string name="tool_mybu">My BU</string>
    <string name="tool_mail">Web Mail</string>
    <string name="setting_language">Language</string>
    <string name="setting_color">Theme Colors</string>
    <string name="setting_about">About Us</string>

    <string name="app_decription">app_decription</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="register">Register</string>
    <string name="different_login">or</string>
    <string name="name">Name</string>
    <string name="password"> Pwd</string>
    <string name="password1">Password</string>
    <string name="password2">Repeat your password</string>
    <string name="email">Email address</string>
    <string name="email1">Email</string>
    <string name="sign">LOGIN</string>
    <string name="privacy">Privacy agreement</string>
    <string name="contact_us">Contact us</string>
    <string name="google">SIGN IN WITH GOOGLE</string>
    <string name="facebook">FACEBOOK</string>
    <string name="login_success">Login successfully!</string>
    <string name="reg_success">Register successfully!</string>
    <string name="login_fail">login_failed!</string>
    <string name="reg_fail">Register failed!</string>
    <string name="check_pwd">Two different passwords, check again! </string>
    <string name="check_email">Please input a valid email address!</string>
    <string name="network_err">Network error!</string>


    <!-- URL -->
    <string name="URL">url</string>
    <string name="url_bu_main">www.ubishops.ca/</string>
    <string name="url_bu_schedule">buy.gaiters.ca/Facility/GetSchedule</string>
    <string name="url_bu_directory">https://www.ubishops.ca/bu-directory/</string>
    <string name="url_bu_moodle">https://moodle.ubishops.ca/</string>
    <string name="url_bu_mybu">https://mybu.ubishops.ca/</string>
    <string name="url_bu_webmail">http://webmail.ubishops.ca/owa/</string>
    <string name="url_bu_contact">https://www.ubishops.ca/contact-us/</string>
    <string name="url_about_us">https://github.com/Grindewald1900/BU-tools</string>

    <!-- Key -->
    <string name="google_map_key">AIzaSyCHFbT6FOwbqaEMQVSQzr0hWag7ovhsPBI</string>
    <string name="google_direction_webService_key">AIzaSyBQFKZ0hDgbeLvp5DecaJ_PvNL2ADaOoKg</string>

    <!-- Location -->
    <string name="lon_main">lon_main</string>
    <string name="lat_main">lat_main</string>

    <string name="A1">1-Astronomical Observatory</string>
    <string name="A2">2-Bandeen Hall</string>
    <string name="A3">3-Library Learning Commons</string>
    <string name="A4">4-Centennial Theatre</string>
    <string name="A5">5-Champlain College (CEGEP)</string>
    <string name="A6">6-Cormier Centre (Dobson-Lagasse)</string>
    <string name="A7">7-Bishop Williams Hall</string>
    <string name="A8">8-Foreman Art Gallery</string>
    <string name="A9">9-Hamilton Building</string>
    <string name="A10">10-Johnson Science Building</string>
    <string name="A11">11-Marjorie Donald House (The SUB)</string>
    <string name="A12">12-McGreer (Administration - Academic Offices)</string>
    <string name="A13">13-Molson Fine Arts Building</string>
    <string name="A14">14-Morris House</string>
    <string name="A15">15-Nicolls Arts Building</string>
    <string name="A16">16-Turner Studio Theatre</string>

    <string name="B1">1-Buildings and Grounds</string>
    <string name="B2">2-Coulter Field</string>
    <string name="B3">3-Golf Course</string>
    <string name="B4">4-Hangar</string>
    <string name="B5">5-Health Services</string>
    <string name="B6">6-John H. Price Sports Centre</string>
    <string name="B7">7-Panda Daycare</string>
    <string name="B8">8-Security</string>
    <string name="B9">9-St. Mark\'s Chapel</string>
    <string name="B10">10-University Bookstore</string>
    <string name="B11">11-W.B. Scott Arena and Outdoor Pool</string>

    <string name="C1">1-Adam\'s Dining Room</string>
    <string name="C2">2-Dewhurst Dining Hall</string>
    <string name="C3">3-The Bus Stop Cafe</string>
    <string name="C4">4-Tim Horton\'s</string>
    <string name="C5">5-Gaiter Grill and Quiznos</string>
    <string name="C6">6-Sport Center Coffee Shop</string>

    <string name="D1">1-Abbott Residence</string>
    <string name="D2">2-Kuehner Residence</string>
    <string name="D3">3-Mackinnon Residence</string>
    <string name="D4">4-Munster Residence</string>
    <string name="D5">5-Norton Pollack Residence</string>
    <string name="D6">6-Paterson Hall</string>

    <!-- Others -->
    <string name="home_second">Home Second</string>
    <string name="demo_user_mail">yren@ubishops.ca</string>
    <string name="goto_map">Go to Map</string>
    <string name="title_welcome_one">Campus map</string>
    <string name="title_welcome_two">Gym schedule</string>
    <string name="title_welcome_three">Useful tools</string>
    <string name="permission_success">Success!</string>
    <string name="permission_fail">Fail!</string>
    <string name="select_location">Select a location ↓</string>
    <string name="No_destination">No destination chosen</string>
    <string name="select_again">Please select a valid destination!</string>
    <string name="get_direction">Get direction →</string>
    <string name="fail_location">Failed to get your location, please try again</string>
    <string name="no_permission">No permission, please grant permissions in Settings</string>
    <string name="change_trans_mode">Transport Mode: Walking</string>
    <string name="change_trans_mode2">Transport Mode: Driving</string>
    <string name="change_trans_mode3">Transport Mode: Bicycling</string>
    <string name="click_sign">Click to sign in</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>
