<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/icon_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/icon_map"
            android:title="@string/menu_map" />
        <item
            android:id="@+id/nav_sports"
            android:icon="@drawable/icon_sports"
            android:title="@string/menu_sports" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/icon_tools"
            android:title="@string/menu_tools" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/icon_settings"
            android:title="@string/menu_settings" />
    </group>
</menu>
