<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.tool.ToolsFragment">
    <ImageView
        android:id="@+id/iv_tool_title"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:src="@drawable/bk_tools_title"
        app:layout_constraintTop_toTopOf="parent"
        />
    <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
        android:id="@+id/bt_tool_1"
        android:layout_width="@dimen/dimen_button_width"
        android:layout_height="@dimen/dimen_50"
        android:layout_marginTop="@dimen/dimen_20"
        android:text="@string/tool_directory"
        android:textColor="@color/qmui_config_color_white"
        android:textSize="@dimen/qmui_btn_text_size"
        app:qmui_borderColor="@color/qmui_config_color_white"
        app:qmui_backgroundColor="@color/colorPrimary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_tool_title"
        />
    <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
        android:id="@+id/bt_tool_2"
        android:layout_width="@dimen/dimen_button_width"
        android:layout_height="@dimen/dimen_50"
        android:layout_marginTop="@dimen/dimen_20"
        android:text="@string/tool_moodle"
        android:textColor="@color/qmui_config_color_white"
        android:textSize="@dimen/qmui_btn_text_size"
        app:qmui_borderColor="@color/qmui_config_color_white"
        app:qmui_backgroundColor="@color/colorPrimary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_tool_1"
        />
    <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
        android:id="@+id/bt_tool_3"
        android:layout_width="@dimen/dimen_button_width"
        android:layout_height="@dimen/dimen_50"
        android:layout_marginTop="@dimen/dimen_20"
        android:text="@string/tool_mybu"
        android:textColor="@color/qmui_config_color_white"
        android:textSize="@dimen/qmui_btn_text_size"
        app:qmui_borderColor="@color/qmui_config_color_white"
        app:qmui_backgroundColor="@color/colorPrimary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_tool_2"
        />
    <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
        android:id="@+id/bt_tool_4"
        android:layout_width="@dimen/dimen_button_width"
        android:layout_height="@dimen/dimen_50"
        android:layout_marginTop="@dimen/dimen_20"
        android:text="@string/tool_mail"
        android:textColor="@color/qmui_config_color_white"
        android:textSize="@dimen/qmui_btn_text_size"
        app:qmui_borderColor="@color/qmui_config_color_white"
        app:qmui_backgroundColor="@color/colorPrimary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_tool_3"
        />


</androidx.constraintlayout.widget.ConstraintLayout>