<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.LoginActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
        android:id="@+id/tv_login_logo"
        android:layout_width="@dimen/dimen_220"
        android:layout_height="@dimen/dimen_70"
        android:layout_gravity="center_horizontal"
        android:text="@string/app_name"
        android:textColor="@color/qmui_config_color_white"
        android:textStyle="bold"
        android:textSize="45sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dimen_80"
        app:qmui_borderColor="@color/colorPrimary"
        app:qmui_backgroundColor="@color/colorPrimary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
        android:id="@+id/tv_login_name"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:text="@string/name"
        android:textSize="15sp"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="@dimen/dimen_40"
        android:layout_marginLeft="@dimen/dimen_40"
        app:qmui_borderColor="@color/colorPrimary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_login_logo"
        />
    <EditText
        android:id="@+id/et_login_name"
        android:layout_width="@dimen/dimen_240"
        android:layout_height="@dimen/dimen_50"
        android:layout_marginLeft="@dimen/dimen_20"
        app:layout_constraintTop_toTopOf="@id/tv_login_name"
        app:layout_constraintBottom_toBottomOf="@id/tv_login_name"
        app:layout_constraintLeft_toRightOf="@id/tv_login_name"
        />
    <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
        android:id="@+id/tv_login_pass"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:text="@string/password"
        android:textSize="15sp"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="@dimen/dimen_40"
        android:layout_marginLeft="@dimen/dimen_40"
        app:qmui_borderColor="@color/colorPrimary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_login_name"
        />
    <EditText
        android:id="@+id/et_login_pwd"
        android:layout_width="@dimen/dimen_240"
        android:layout_height="@dimen/dimen_50"
        android:layout_marginLeft="@dimen/dimen_20"
        app:layout_constraintTop_toTopOf="@id/tv_login_pass"
        app:layout_constraintBottom_toBottomOf="@id/tv_login_pass"
        app:layout_constraintLeft_toRightOf="@id/tv_login_name"
        />
    <TextView
        android:id="@+id/tv_login_forget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textSize="15sp"
        android:layout_marginTop="@dimen/dimen_40"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/tv_login_register"
        app:layout_constraintTop_toBottomOf="@id/tv_login_pass"
        />
    <TextView
        android:id="@+id/tv_login_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textSize="15sp"
        android:layout_marginTop="@dimen/dimen_40"
        app:layout_constraintLeft_toRightOf="@id/tv_login_forget"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_login_pass"
        />

    <LinearLayout
        android:id="@+id/ll_login_bu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_50"
        android:orientation="horizontal"
        android:layout_marginRight="@dimen/dimen_40"
        app:layout_constraintTop_toBottomOf="@id/tv_login_forget"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        >
        <ImageView
            android:id="@+id/iv_login_bu"
            android:layout_width="@dimen/dimen_50"
            android:layout_height="@dimen/dimen_50"
            android:src="@drawable/icon_login"
            />
        <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
            android:id="@+id/bt_login_sign"
            android:layout_width="@dimen/dimen_240"
            android:layout_height="@dimen/dimen_50"
            android:text="@string/sign"
            android:textSize="@dimen/qmui_btn_text_size"
            android:textColor="@color/qmui_config_color_white"
            android:layout_marginLeft="@dimen/dimen_10"
            app:qmui_borderColor="@color/colorPrimary"
            app:qmui_backgroundColor="@color/colorPrimary"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_login_google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_50"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/ll_login_bu"
        app:layout_constraintRight_toRightOf="@id/ll_login_bu"
        >
        <ImageView
            android:id="@+id/iv_login_google"
            android:layout_width="@dimen/dimen_50"
            android:layout_height="@dimen/dimen_50"
            android:src="@drawable/icon_google"
            />
        <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
            android:id="@+id/bt_login_google"
            android:layout_width="@dimen/dimen_240"
            android:layout_height="@dimen/dimen_50"
            android:text="@string/google"
            android:textSize="@dimen/qmui_btn_text_size"
            android:textColor="@color/qmui_config_color_white"
            android:layout_marginLeft="@dimen/dimen_10"
            app:qmui_borderColor="@color/google"
            app:qmui_backgroundColor="@color/google"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_login_facebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_20"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/ll_login_google"
        app:layout_constraintRight_toRightOf="@id/ll_login_google"
        >
        <ImageView
            android:id="@+id/iv_login_facebook"
            android:layout_width="@dimen/dimen_50"
            android:layout_height="@dimen/dimen_50"
            android:src="@drawable/icon_facebook"
            app:layout_constraintTop_toBottomOf="@id/iv_login_google"
            app:layout_constraintLeft_toLeftOf="@id/bt_login_sign"
            />
        <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
            android:id="@+id/bt_login_facebook"
            android:layout_width="@dimen/dimen_240"
            android:layout_height="@dimen/dimen_50"
            android:text="@string/facebook"
            android:textSize="@dimen/qmui_btn_text_size"
            android:textColor="@color/qmui_config_color_white"
            android:layout_marginLeft="@dimen/dimen_10"
            app:qmui_borderColor="@color/facebook"
            app:qmui_backgroundColor="@color/facebook"
            app:layout_constraintTop_toTopOf="@id/iv_login_facebook"
            app:layout_constraintBottom_toBottomOf="@id/iv_login_facebook"
            app:layout_constraintLeft_toRightOf="@id/iv_login_facebook"
            />
    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>
